--- a/main/templates/main/transactions.html
+++ b/main/templates/main/transactions.html
@@ -18,7 +18,7 @@
         </table>
     </div>
     <p>
-        <form action="/reckon/{{sheet.name}}">
+        <form action="/reckon/{{sheet.id}}">
             <button type="submit" name="go_back" class="btn btn-primary btn-sm">Back</button>
         </form>
     </p>
