--- a/main/templates/main/debet.html
+++ b/main/templates/main/debet.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <div>
-        <form method="post" action="/reckon/{{view.name}}/{{item.name}}">
+        <form method="post" action="/reckon/{{view.id}}/{{item.name}}">
             {% csrf_token %}
             {% for person in debt %}
                 <p>
